--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,23 @@ body {
 /* .story {
   padding: 0 1em;
 } */
-
+.progress-container {
+  width: 100%;
+  height: 8px;
+  background: #ccc;
+}
+.scrollbar{
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+  background-color: #f1f1f1;
+}
+.progress-bar {
+  height: 8px;
+  background: red;
+  width: 0%;
+}
 .header-naivgation {
   display: flex;
   position: fixed;
