--- a/css/index.css
+++ b/css/index.css
@@ -41,10 +41,13 @@ body {
   height: 5em;
   background-color: #000000;
 }
+.mobile-container{
+  display: none;
+}
 .un-list {
   display: flex;
   color: #fff;
-  margin: 2em 0 0 20em;
+  margin: 2em 0 0 8em;
 }
 /* Code by Nishant Malik and Jobanjit Singh*/
 .logo-top {
@@ -54,7 +57,7 @@ body {
 }
 .un-list li {
   display: flex;
-  margin: 0 7em 0 0;
+  margin: 0 3em 0 0;
   color: #fff;
   font-family: 'Audiowide', cursive;
   font-size: 1em;
@@ -169,3 +172,51 @@ h2{
 .footer p{font-family: 'Patrick Hand', cursive;}
 
 /* Code By Nishant Malik and Jobanjit Singh */
+
+@media only screen and (max-width: 900px){
+  .nav-container{
+    display: none;
+}
+
+.mobile-container {
+    display: block;
+    margin:0.2em 0em 0.2em 2em;
+  
+    color: Black;
+    border-radius: 10px;
+  }
+  
+  .topnav {
+    overflow: hidden;
+    background-color: black;
+    width: 18em;
+    float: left;
+    border-radius: 0.3em;
+  }
+  .topnav li{
+    list-style: none;
+  }
+  .topnav #myLinks {
+    margin-top: 1em;
+    display: none;
+    text-align: center;
+  }
+  
+  .topnav a {
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    display: block;
+  }
+  .topnav a.icon {
+    background: red;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 15px;
+  }
+  .text-background{
+    position: center;
+  }
+}
